// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleCard should match the snapshot when there are no notes 1`] = `
<div
  className="ScheduleCard"
>
  <p
    className="ScheduleCard--date"
  >
    Thu Apr 18 2019
     at 
    8:00 - 8:50 a.m.
  </p>
  <h3>
    Tiffany
  </h3>
  <p>
    Pronouns: 
    she/her
  </p>
  <p>
    Slack: 
    @tiffany
  </p>
  <p>
    Program: 
    FE
     Mod 
    4
  </p>
  <p>
    Notes: 
    no notes
  </p>
</div>
`;

exports[`ScheduleCard should match the snapshot when there are notes 1`] = `
<div
  className="ScheduleCard"
>
  <p
    className="ScheduleCard--date"
  >
    Thu Apr 18 2019
     at 
    8:00 - 8:50 a.m.
  </p>
  <h3>
    Tiffany
  </h3>
  <p>
    Pronouns: 
    she/her
  </p>
  <p>
    Slack: 
    @tiffany
  </p>
  <p>
    Program: 
    FE
     Mod 
    4
  </p>
  <p>
    Notes: 
    Help with JSFun problemset
  </p>
</div>
`;
